# py-csv-aggregator

./: .gitignore  README.md  pyproject.toml
csv-aggregator/: __init__.py  core.py  extractor.py  transformer.py
csv-aggregator/data/: 2017-06 Journal.csv
csv_aggregator/: __init__.py  core.py  extractor.py  output.json  transformer.py  utils.py
csv_aggregator/data/: 2017-06 Journal.csv
csv_aggregator/data/2017/04-05/: 2017-04-05 Journal.csv
csv_aggregator/outputs/: csvagg 20251215_120430 group-by-weekday agg-by-mean min--2017-12-31.json
csv_aggregator/tests/: __init__.py  test_core.py  test_extractor.py  test_transformer.py
