# no idea what this is going to be

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "csv_aggregator"
dynamic = ["version"]
authors = [
  { name="Denislav Dimitrov", email="denislav.dimitrov@mail.bg" },
]
description = "CSV Aggregator from multiple files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", #   5 - Production/Stable
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["fpdf2>2.8"]

[project.scripts]
csv-agg = "csv_aggregator.core:main"

[project.urls]
Homepage = "https://github.com/DenislavD/py-csv-aggregator"
Issues = "https://github.com/DenislavD/py-csv-aggregator/issues"

[tool.hatch.version]
path = "csv_aggregator/__init__.py"
